Changed color of action bar to blue, added twitter compose icon, links in tweets are clickable

--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -33,6 +33,7 @@
         android:layout_below="@+id/tvScreenName"
         android:layout_marginStart="5dp"
         android:layout_marginTop="2dp"
+        android:autoLink="all"
         android:layout_toEndOf="@+id/ivProfileImage"
         tools:text="This is my tweet!!" />
 
